--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+@media only screen and (max-width: 800px) {
+  .App {
+    background-color: red;
+  }
+}
