--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,15 @@
   left: 0;
   bottom: 0;
   }
+
+  .main-text {
+    color: #333333;
+    margin-top: 48px;
+    font-size: 2rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .main-container {
+    display: flex;
+    justify-content: center;
+  }
